--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer compoenents {
+    .navLink {
+        @apply decoration-orange-400 text-center decoration-2 underline-offset-8 rounded-full p-4 cursor-pointer transition-transform duration-200 ease-out;
+    }
+}
